[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/sbh_large.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/sbh_regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Lobby Menu/Lobby_Menu.gd" type="Script" id=3]
[ext_resource path="res://Main Menu/Buttons/ButtonMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Background.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Status_Regular"
length = 5.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Status:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -1, 0 ]
}

[sub_resource type="Animation" id=2]
length = 5.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Status:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2, 2.5, 3, 4, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, -1, 11, 12, -1, 11, 12, -1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../../../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_join_timeout"
} ]
}

[node name="LobbyMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 640, 360 )
__meta__ = {
"_edit_lock_": true
}

[node name="ConnectionScreen" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -65.0
margin_right = 100.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ConnectionScreen"]
margin_right = 200.0
margin_bottom = 135.0

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectionScreen/Panel"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -57.0
margin_right = 57.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="ConnectionScreen/Panel/VBoxContainer"]
margin_right = 114.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "Name:"

[node name="Name" type="LineEdit" parent="ConnectionScreen/Panel/VBoxContainer"]
margin_top = 16.0
margin_right = 114.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 2 )

[node name="AdressLabel" type="Label" parent="ConnectionScreen/Panel/VBoxContainer"]
margin_top = 42.0
margin_right = 114.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "Address:"

[node name="Address" type="LineEdit" parent="ConnectionScreen/Panel/VBoxContainer"]
margin_top = 58.0
margin_right = 114.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 2 )
text = "127.0.0.1"
expand_to_text_length = true
placeholder_text = "Write IP address here"

[node name="ButtonBox" type="HBoxContainer" parent="ConnectionScreen/Panel/VBoxContainer"]
margin_top = 84.0
margin_right = 114.0
margin_bottom = 114.0
custom_constants/separation = 16
alignment = 1

[node name="ButtonHost" parent="ConnectionScreen/Panel/VBoxContainer/ButtonBox" instance=ExtResource( 4 )]
margin_right = 50.0
text = "Host"

[node name="ButtonJoin" parent="ConnectionScreen/Panel/VBoxContainer/ButtonBox" instance=ExtResource( 4 )]
margin_left = 66.0
margin_right = 114.0
text = "Join"

[node name="StatusBox" type="CenterContainer" parent="ConnectionScreen/Panel/VBoxContainer"]
margin_top = 118.0
margin_right = 114.0
margin_bottom = 130.0

[node name="Status" type="Label" parent="ConnectionScreen/Panel/VBoxContainer/StatusBox"]
margin_left = 57.0
margin_right = 57.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
percent_visible = 0.923077

[node name="AnimationStatus" type="AnimationPlayer" parent="ConnectionScreen/Panel/VBoxContainer/StatusBox"]
anims/Status_Regular = SubResource( 1 )
anims/Status_Wait = SubResource( 2 )

[node name="LobbyScreen" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -100.0
margin_right = 80.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="LobbyScreen"]
margin_right = 160.0
margin_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyScreen/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -100.0
margin_right = 60.0
margin_bottom = 100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status_Players" type="Label" parent="LobbyScreen/Panel/VBoxContainer"]
margin_right = 124.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "Awaiting Players"

[node name="PlayerList" type="ItemList" parent="LobbyScreen/Panel/VBoxContainer"]
margin_top = 16.0
margin_right = 124.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="LobbyScreen/Panel/VBoxContainer"]
margin_top = 170.0
margin_right = 124.0
margin_bottom = 200.0

[node name="Button_Start" parent="LobbyScreen/Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_right = 62.0
text = "Start!"

[node name="Button_Leave" parent="LobbyScreen/Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 66.0
margin_right = 124.0
text = "Leave"

[node name="TitleContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.0
margin_right = 75.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page_Title" type="Label" parent="TitleContainer"]
margin_top = 8.0
margin_right = 150.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "Multiplayer Game"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -29.0
margin_right = 80.0
margin_bottom = 29.0
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" parent="." instance=ExtResource( 4 )]
margin_left = 11.7325
margin_top = 317.681
margin_right = 67.7325
margin_bottom = 347.681
text = "Back"
[connection signal="pressed" from="ConnectionScreen/Panel/VBoxContainer/ButtonBox/ButtonHost" to="." method="_on_Button_Host_pressed"]
[connection signal="pressed" from="ConnectionScreen/Panel/VBoxContainer/ButtonBox/ButtonJoin" to="." method="_on_Button_Join_pressed"]
[connection signal="pressed" from="LobbyScreen/Panel/VBoxContainer/HBoxContainer/Button_Start" to="." method="_on_Button_Start_pressed"]
[connection signal="pressed" from="LobbyScreen/Panel/VBoxContainer/HBoxContainer/Button_Leave" to="." method="_on_Button_Leave_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
